--- a/PXLaravel/composer.json
+++ b/PXLaravel/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "yajra/laravel-datatables": "10.0",
         "yajra/laravel-datatables-buttons": "^10.0",
         "yajra/laravel-datatables-oracle": "10.3.1"
